# sun-graph

./: .flake8  .gitignore  README.md  config.yaml  locations.yaml  main.py  pyproject.toml  requirements-dev-versions.txt  requirements.txt
sun_graph/: routes.py  settings.py  views.py
sun_graph/static/css/: styles.css
sun_graph/templates/: base.html  generate.html  index.html
